New format for README

--- a/package.json
+++ b/package.json
@@ -1,11 +1,27 @@
 {
   "name": "cylon-bebop",
-  "description": "Cylon module for the Parrot Bebop",
+  "description": "Cylon module for the Parrot Bebop drone",
   "homepage": "http://cylonjs.com",
   "version": "0.1.0",
   "main": "lib/index.js",
   "author": "The Hybrid Group <cylonjs@hybridgroup.com>",
-  "license": "Apache 2.0",
+
+  "license": "Apache-2.0",
+
+  "keywords": [
+    "cylon",
+    "cylonjs",
+    "cylons",
+    "robot",
+    "robots",
+    "robotics",
+    "iot",
+    "hardware",
+    "Parrot",
+    "Bebop",
+    "nodecopter"
+  ],
+  
   "bugs": "https://github.com/hybridgroup/cylon-bebop/issues",
   "repository": {
     "type": "git",
