--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ install:
   - npm install -g jshint istanbul codeclimate-test-reporter
 script:
   - make ci
-  - CODECLIMATE_REPO_TOKEN=af57ad1cc2f1c17d2c000f530e8d848a908eaebf409b42a7b66790f758cfad8a codeclimate < coverage/lcov.info
+  - CODECLIMATE_REPO_TOKEN=af57ad1cc2f1c17d2c000f530e8d848a908eaebf409b42a7b66790f758cfad8a codeclimate-test-reporter < coverage/lcov.info
